--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="layout_IDCard_Positive">拍摄身份证正面</string>
     <string name="layout_IDCard_Negative">拍摄身份证背面</string>
     <string name="layout_WayOfPay">请选择支付方式</string>
-    <string name="layout_SureToBuy">确定购买</string>
+    <string name="layout_SureToBuy">支付</string>
 
 
     <!--activity_edit_personal_data-->
