[title]insert title adaptation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,6 @@
     <string name="editpersonaldata_tel">18941332425 (请重新填写)</string>
     <string name="adddata">补充资料</string>
 
+    <string name="mePersonalCenter">个人中心</string>
 
 </resources>
